add weekly stat and AI summary